# ML-homeworks

./: README.md  pyproject.toml
hw_0-1/: ConvolutionalNetworks.ipynb  two_layer_net.ipynb
hw_0-1/classifiers/: cnn.py  fc_net.py  layer_utils.py  layers.py
hw_0-1/datasets/: get_datasets.sh
hw_2/: hw2-transformer.ipynb
